class restructuring and adjustments

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -26,181 +26,161 @@
     <section class="team-cards">
 
         <!-- Alec's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Alec-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
-                </a>
-                <a ID="Alec" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+        <div class="card-link">
+            <a href="#Alec-card">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
+            </a>
+            <a ID="Alec" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Alec</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Alec</h>
+                <p class="photo-caption-p">identity</p>
             </div>
         </div>
 
         <!-- Alex's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Alex-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
-                </a>
+        <div class="card-link">
+            <a href="#Alex-card">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
+            </a>
 
-                <a ID="Alex" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Alex" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Alex</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Alex</h>
+                <p class="photo-caption-p">identity</p>
             </div>
         </div>
 
         <!-- Aubreys Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href=#Aubrey-card>
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
-                </a>
+        <div class="card-link">
+            <a href=#Aubrey-card>
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
+            </a>
 
-                <a ID="Aubrey" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Aubrey" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Aubrey</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Aubrey</h>
+                <p class="photo-caption-p">identity</p>
             </div>
         </div>
 
         <!-- Charlies Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Charlie-card">
-                    <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
-                </a>
+        <div class="card-link">
+            <a href="#Charlie-card">
+                <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
+            </a>
 
-                <a ID="Charlie" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Charlie" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Charlie</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Charlie</h>
+                <p class="photo-caption-p">identity</p>
             </div>
         </div>
 
         <!-- Garret's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Garret-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
-                </a>
+        <div class="card-link">
+            <a href="#Garret-card">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
+            </a>
 
-                <a ID="Garret" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Garret" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Garret</h>
-                    <p class="photo-caption-p">(They/Them)</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Garret</h>
+                <p class="photo-caption-p">(They/Them)</p>
             </div>
         </div>
 
         <!-- Joseph's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Joseph-card">
-                    <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
-                </a>
+        <div class="card-link">
+            <a href="#Joseph-card">
+                <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
+            </a>
 
-                <a ID="Joseph" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Joseph" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Joseph JoJo</h>
-                    <p class="photo-caption-p">(He/Him)</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Joseph JoJo</h>
+                <p class="photo-caption-p">(He/Him)</p>
             </div>
         </div>
 
         <!-- Michael's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href=#Michael-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
-                </a>
+        <div class="card-link">
+            <a href=#Michael-card">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
+            </a>
 
-                <a ID="Michael" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Michael" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Michael</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Michael</h>
+                <p class="photo-caption-p">identity</p>
             </div>
         </div>
 
         <!-- Nick's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Nick-card">
-                    <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
-                </a>
+        <div class="card-link">
+            <a href="#Nick-card">
+                <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
+            </a>
 
-                <a ID="Nick" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Nick" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Nick</h>
-                    <p class="photo-caption-p">(He/Him)</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Nick</h>
+                <p class="photo-caption-p">(He/Him)</p>
             </div>
         </div>
 
         <!-- Roy's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Roy-card">
-                    <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
-                </a>
+        <div class="card-link">
+            <a href="#Roy-card">
+                <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
+            </a>
 
-                <a ID="Roy" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Roy" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Roy</h>
-                    <p class="photo-caption-p">(He/Him)</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Roy</h>
+                <p class="photo-caption-p">(He/Him)</p>
             </div>
         </div>
 
         <!-- Trey's Card link -->
-        <div class="card">
-            <div class="card-photo">
-                <a href="#Trey-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
-                </a>
+        <div class="card-link">
+            <a href="#Trey-card">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
+            </a>
 
-                <a ID="Trey" class="live-status" href="#">
-                    <img rel="islive" src="/images/live.png" alt="isLive">
-                </a>
+            <a ID="Trey" class="live-status" href="#">
+                <img rel="islive" src="/images/live.png" alt="isLive">
+            </a>
 
-                <div class="bottom-left">
-                    <h class="photo-caption-h">Trey</h>
-                    <p class="photo-caption-p">identity</p>
-                </div>
+            <div class="about-bottom-left">
+                <h class="photo-caption-h">Trey</h>
+                <p class="photo-caption-p">identity</p>
             </div>
         </div>
 
@@ -229,7 +209,7 @@
     <section class=card-info>
 
         <div class="info-card" id="Alec-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
 
                 <a ID="Alec" class="live-status" href="#">
@@ -255,9 +235,9 @@
             </div>
         </div>
 
-           <!-- Alex's full info card -->
+        <!-- Alex's full info card -->
         <div class="info-card" id="Alex-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
 
                 <a ID="Alex" class="live-status" href="#">
@@ -283,9 +263,9 @@
             </div>
         </div>
 
-           <!-- Aubrey's full info card -->
+        <!-- Aubrey's full info card -->
         <div class="info-card" id="Aubrey-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
 
                 <a ID="Aubrey" class="live-status" href="#">
@@ -311,9 +291,9 @@
             </div>
         </div>
 
-           <!-- Charlies's full info card -->
+        <!-- Charlies's full info card -->
         <div class="info-card" id="Charlie-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
                 <a ID="Charlie" class="live-status" href="#">
@@ -339,9 +319,9 @@
             </div>
         </div>
 
-           <!-- Garrets's full info card -->
+        <!-- Garrets's full info card -->
         <div class="info-card" id="Garret-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
 
                 <a ID="Garret" class="live-status" href="#">
@@ -369,9 +349,9 @@
             </div>
         </div>
 
-           <!-- Joseph's full info card -->
+        <!-- Joseph's full info card -->
         <div class="info-card" id="Joseph-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
 
                 <a ID="Joseph" class="live-status" href="#">
@@ -399,9 +379,9 @@
             </div>
         </div>
 
-           <!-- Michaels's full info card -->
+        <!-- Michaels's full info card -->
         <div class="info-card" id="Michael-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
                 <a ID="Michael" class="live-status" href="#">
@@ -427,9 +407,9 @@
             </div>
         </div>
 
-           <!-- Nick's full info card -->
+        <!-- Nick's full info card -->
         <div class="info-card" id="Nick-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
                 <a ID="Nick" class="live-status" href="#">
@@ -455,9 +435,9 @@
             </div>
         </div>
 
-           <!-- Roy's full info card -->
+        <!-- Roy's full info card -->
         <div class="info-card" id="Roy-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
                 <a ID="Roy" class="live-status" href="#">
@@ -483,9 +463,9 @@
             </div>
         </div>
 
-           <!-- Trey's full info card -->
+        <!-- Trey's full info card -->
         <div class="info-card" id="Trey-card">
-            <div class="card-photo">
+            <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
 
                 <a ID="Trey" class="live-status" href="#">
