returning to previous div structure

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -26,167 +26,187 @@
     <section class="team-cards">
 
         <!-- Alec's Card link -->
-        <div class="card-link">
-            <a href="#Alec-card">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
-            </a>
-            <a ID="Alec" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Alec-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
+                </a>
+                <a ID="Alec" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Alec</h>
-                <p class="photo-caption-p">identity</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Alec</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
             </div>
         </div>
 
         <!-- Alex's Card link -->
-        <div class="card-link">
-            <a href="#Alex-card">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Alex-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
+                </a>
 
-            <a ID="Alex" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Alex" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Alex</h>
-                <p class="photo-caption-p">identity</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Alex</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
             </div>
         </div>
 
         <!-- Aubreys Card link -->
-        <div class="card-link">
-            <a href=#Aubrey-card>
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href=#Aubrey-card>
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
+                </a>
 
-            <a ID="Aubrey" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Aubrey" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Aubrey</h>
-                <p class="photo-caption-p">identity</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Aubrey</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
             </div>
         </div>
 
         <!-- Charlies Card link -->
-        <div class="card-link">
-            <a href="#Charlie-card">
-                <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Charlie-card">
+                    <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
+                </a>
 
-            <a ID="Charlie" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Charlie" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Charlie</h>
-                <p class="photo-caption-p">identity</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Charlie</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
             </div>
         </div>
 
         <!-- Garret's Card link -->
-        <div class="card-link">
-            <a href="#Garret-card">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Garret-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
+                </a>
 
-            <a ID="Garret" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Garret" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Garret</h>
-                <p class="photo-caption-p">(They/Them)</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Garret</h>
+                    <p class="photo-caption-p">(They/Them)</p>
+                </div>
             </div>
         </div>
 
         <!-- Joseph's Card link -->
-        <div class="card-link">
-            <a href="#Joseph-card">
-                <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Joseph-card">
+                    <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
+                </a>
 
-            <a ID="Joseph" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Joseph" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Joseph JoJo</h>
-                <p class="photo-caption-p">(He/Him)</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Joseph JoJo</h>
+                    <p class="photo-caption-p">(He/Him)</p>
+                </div>
             </div>
         </div>
 
         <!-- Michael's Card link -->
-        <div class="card-link">
-            <a href=#Michael-card">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href=#Michael-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
+                </a>
 
-            <a ID="Michael" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Michael" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Michael</h>
-                <p class="photo-caption-p">identity</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Michael</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
             </div>
         </div>
 
         <!-- Nick's Card link -->
-        <div class="card-link">
-            <a href="#Nick-card">
-                <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Nick-card">
+                    <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
+                </a>
 
-            <a ID="Nick" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Nick" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Nick</h>
-                <p class="photo-caption-p">(He/Him)</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Nick</h>
+                    <p class="photo-caption-p">(He/Him)</p>
+                </div>
             </div>
         </div>
 
         <!-- Roy's Card link -->
-        <div class="card-link">
-            <a href="#Roy-card">
-                <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Roy-card">
+                    <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
+                </a>
 
-            <a ID="Roy" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Roy" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Roy</h>
-                <p class="photo-caption-p">(He/Him)</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Roy</h>
+                    <p class="photo-caption-p">(He/Him)</p>
+                </div>
             </div>
         </div>
 
         <!-- Trey's Card link -->
-        <div class="card-link">
-            <a href="#Trey-card">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
-            </a>
+        <div class="card">
+            <div class="card-link">
+                <a href="#Trey-card">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
+                </a>
 
-            <a ID="Trey" class="live-status" href="#">
-                <img rel="islive" src="/images/live.png" alt="isLive">
-            </a>
+                <a ID="Trey" class="live-status" href="#">
+                    <img rel="islive" src="/images/live.png" alt="isLive">
+                </a>
 
-            <div class="about-bottom-left">
-                <h class="photo-caption-h">Trey</h>
-                <p class="photo-caption-p">identity</p>
+                <div class="about-bottom-left">
+                    <h class="photo-caption-h">Trey</h>
+                    <p class="photo-caption-p">identity</p>
+                </div>
             </div>
         </div>
 
         <!-- template for card -->
         <!-- <div class="card">
-            <div class="card-photo">
+            <div class="card-link">
 
                 <a href="#member-card">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="membersname">
@@ -196,7 +216,7 @@
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
-                <div class="bottom-left">
+                <div class="about-bottom-left">
                     <h class="photo-caption-h">Name</h>
                     <p class="photo-caption-p">identity</p>
                 </div>
