--- a/Pages/about.html
+++ b/Pages/about.html
@@ -135,8 +135,8 @@
         <!-- Michael's Card link -->
         <div class="card">
             <div class="card-link">
-                <a href=#Michael-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
+                <a href="#Michael-card">
+                    <img rel="member-photo" src="/images/Michael-photo.jpg" alt="Michael">
                 </a>
 
                 <a ID="Michael" class="live-status" href="#">
@@ -145,7 +145,7 @@
 
                 <div class="about-bottom-left">
                     <h class="photo-caption-h">Michael</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
         </div>
@@ -350,7 +350,7 @@
 
                 <div class="bottom-left">
                     <h class="photo-caption-h">Garret</h>
-                    <p class="photo-caption-p">(They/Them))</p>
+                    <p class="photo-caption-p">(They/Them)</p>
                 </div>
             </div>
 
@@ -402,7 +402,7 @@
         <!-- Michaels's full info card -->
         <div class="info-card" id="Michael-card">
             <div class="info-card-photo">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
+                <img rel="member-photo" src="/images/Michael-photo.jpg" alt="Michael">
 
                 <a ID="Michael" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -410,20 +410,20 @@
 
                 <div class="bottom-left">
                     <h class="photo-caption-h">Michael</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: "Hater of Amulet"</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Cube, Limited, Modern</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Cube</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: Aggro</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set: Magic Origins</p>
             </div>
         </div>
 
