--- a/Pages/about.html
+++ b/Pages/about.html
@@ -64,7 +64,7 @@
         <div class="card">
             <div class="card-link">
                 <a href=#Aubrey-card>
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
+                    <img rel="member-photo" src="/images/Aubrey-photo.jpg" alt="Aubrey">
                 </a>
 
                 <a ID="Aubrey" class="live-status" href="#">
@@ -73,7 +73,7 @@
 
                 <div class="about-bottom-left">
                     <h class="photo-caption-h">Aubrey</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(She/Her)</p>
                 </div>
             </div>
         </div>
@@ -286,7 +286,7 @@
         <!-- Aubrey's full info card -->
         <div class="info-card" id="Aubrey-card">
             <div class="info-card-photo">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Aubrey">
+                <img rel="member-photo" src="/images/Aubrey-photo.jpg" alt="Aubrey">
 
                 <a ID="Aubrey" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -294,20 +294,22 @@
 
                 <div class="bottom-left">
                     <h class="photo-caption-h">Aubrey</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(She/Her)</p>
                 </div>
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: "The Party"</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Modern, Pioneer, Historic</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Modern</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: Tempo, Aggro</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set: Throne of Eldraine</p>
+                <br>
+                <a href="#">Twitch Channel</a>
             </div>
         </div>
 
