adding in rest of charlie info

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -91,7 +91,7 @@
 
                 <div class="about-bottom-left">
                     <h class="photo-caption-h">Charlie</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/They)</p>
                 </div>
             </div>
         </div>
@@ -324,14 +324,14 @@
 
                 <div class="bottom-left">
                     <h class="photo-caption-h">Charlie</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/They)</p>
                 </div>
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: "Too Deep" "Weird Flex"</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Modern, Legacy, Anything Limited</p>
                 <br>
                 <p>Favorite Format: Limited,Legacy</p>
                 <br>
