--- a/Pages/about.html
+++ b/Pages/about.html
@@ -100,7 +100,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Garret-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
+                    <img rel="member-photo" src="/images/Garret-photo.jpg" alt="Garret">
                 </a>
 
                 <a ID="Garret" class="live-status" href="#">
@@ -136,7 +136,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Michael-card">
-                    <img rel="member-photo" src="/images/Michael-photo.jpg" alt="Michael">
+                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
                 </a>
 
                 <a ID="Michael" class="live-status" href="#">
@@ -344,7 +344,7 @@
         <!-- Garrets's full info card -->
         <div class="info-card" id="Garret-card">
             <div class="info-card-photo">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Garret">
+                <img rel="member-photo" src="/images/Garret-photo.jpg" alt="Garret">
 
                 <a ID="Garret" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -357,15 +357,15 @@
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: "Bently"</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Modern, Pioneer, Cube, Pauper</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Modern, Pioneer, Cube</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: Amulet Titan, Whirza, Game Actions Tribal</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set: Worldwake</p>
                 <br>
                 <a href="https://www.twitch.tv/thr_gk">Twitch Channel</a>
             </div>
@@ -404,7 +404,7 @@
         <!-- Michaels's full info card -->
         <div class="info-card" id="Michael-card">
             <div class="info-card-photo">
-                <img rel="member-photo" src="/images/Michael-photo.jpg" alt="Michael">
+                <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
                 <a ID="Michael" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
