adding in alex info

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -46,7 +46,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Alex-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
+                    <img rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
                 </a>
 
                 <a ID="Alex" class="live-status" href="#">
@@ -55,7 +55,7 @@
 
                 <div class="about-bottom-left">
                     <h class="photo-caption-h">Alex</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
         </div>
@@ -258,7 +258,7 @@
         <!-- Alex's full info card -->
         <div class="info-card" id="Alex-card">
             <div class="info-card-photo">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alex">
+                <img rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
 
                 <a ID="Alex" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -266,20 +266,22 @@
 
                 <div class="bottom-left">
                     <h class="photo-caption-h">Alex</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: THR Graphics Designer</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: modern, legacy, pioneer, historic</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Modern</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: Combo</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set: Amonkhet</p>
+                <br>
+                <a href="#">Twitch Channel</a>
             </div>
         </div>
 
