adding in nicks final info

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -447,15 +447,17 @@
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: Team Captain/Owner</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Modern, Pioneer</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Modern</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: Combo, Control, Combo Control</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set: Ahmonket</p>
+                <br>
+                <a href="#">Twitch Channel</a>
             </div>
         </div>
 
