adding in new clas to combat background applied to multiple leemnts

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -29,7 +29,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Alec-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
+                    <img class="card-link-photo" rel="member-photo"  src="/images/placeholder.jpg"  alt="Alec">
                 </a>
                 <a ID="Alec" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -46,7 +46,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Alex-card">
-                    <img rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
                 </a>
 
                 <a ID="Alex" class="live-status" href="#">
@@ -64,7 +64,7 @@
         <div class="card">
             <div class="card-link">
                 <a href=#Aubrey-card>
-                    <img rel="member-photo" src="/images/Aubrey-photo.jpg" alt="Aubrey">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Aubrey-photo.jpg"  alt="Aubrey">
                 </a>
 
                 <a ID="Aubrey" class="live-status" href="#">
@@ -82,7 +82,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Charlie-card">
-                    <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Charlie-photo.jpg"  alt="Charlie">
                 </a>
 
                 <a ID="Charlie" class="live-status" href="#">
@@ -100,7 +100,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Garret-card">
-                    <img rel="member-photo" src="/images/Garret-photo.jpg" alt="Garret">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Garret-photo.jpg"  alt="Garret">
                 </a>
 
                 <a ID="Garret" class="live-status" href="#">
@@ -118,7 +118,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Joseph-card">
-                    <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Joseph-photo.jpg"  alt="Joseph JoJo">
                 </a>
 
                 <a ID="Joseph" class="live-status" href="#">
@@ -136,7 +136,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Michael-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
+                    <img class="card-link-photo" rel="member-photo" src="/images/placeholder.jpg"  alt="Michael">
                 </a>
 
                 <a ID="Michael" class="live-status" href="#">
@@ -154,7 +154,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Nick-card">
-                    <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Nick-photo.jpg"  alt="Nick">
                 </a>
 
                 <a ID="Nick" class="live-status" href="#">
@@ -172,7 +172,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Roy-card">
-                    <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Roy-photo.jpg"  alt="Roy">
                 </a>
 
                 <a ID="Roy" class="live-status" href="#">
@@ -190,7 +190,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Trey-card">
-                    <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
+                    <img class="card-link-photo" rel="member-photo" src="/images/placeholder.jpg"  alt="Trey">
                 </a>
 
                 <a ID="Trey" class="live-status" href="#">
