fixing live status positioning

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -232,7 +232,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
 
-                <a ID="Alec" class="live-status" href="#">
+                <a ID="Alec" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -260,7 +260,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Alex-photo.jpg" alt="Alex">
 
-                <a ID="Alex" class="live-status" href="#">
+                <a ID="Alex" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -290,7 +290,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Aubrey-photo.jpg" alt="Aubrey">
 
-                <a ID="Aubrey" class="live-status" href="#">
+                <a ID="Aubrey" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -320,7 +320,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Charlie-photo.jpg" alt="Charlie">
 
-                <a ID="Charlie" class="live-status" href="#">
+                <a ID="Charlie" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -348,7 +348,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Garret-photo.jpg" alt="Garret">
 
-                <a ID="Garret" class="live-status" href="#">
+                <a ID="Garret" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -378,7 +378,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Joseph-photo.jpg" alt="Joseph JoJo">
 
-                <a ID="Joseph" class="live-status" href="#">
+                <a ID="Joseph" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -408,7 +408,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Michael">
 
-                <a ID="Michael" class="live-status" href="#">
+                <a ID="Michael" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -436,7 +436,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Nick-photo.jpg" alt="Nick">
 
-                <a ID="Nick" class="live-status" href="#">
+                <a ID="Nick" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -466,7 +466,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/Roy-photo.jpg" alt="Roy">
 
-                <a ID="Roy" class="live-status" href="#">
+                <a ID="Roy" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
@@ -494,7 +494,7 @@
             <div class="info-card-photo">
                 <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
 
-                <a ID="Trey" class="live-status" href="#">
+                <a ID="Trey" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
                 </a>
 
