--- a/Pages/about.html
+++ b/Pages/about.html
@@ -29,7 +29,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Alec-card">
-                    <img class="card-link-photo" rel="member-photo"  src="/images/placeholder.jpg"  alt="Alec">
+                    <img class="card-link-photo" rel="member-photo"  src="/images/Alec-photo.jpg"  alt="Alec">
                 </a>
                 <a ID="Alec" class="live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -37,7 +37,7 @@
 
                 <div class="about-bottom-left">
                     <h class="photo-caption-h">Alec</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
         </div>
@@ -190,7 +190,7 @@
         <div class="card">
             <div class="card-link">
                 <a href="#Trey-card">
-                    <img class="card-link-photo" rel="member-photo" src="/images/placeholder.jpg"  alt="Trey">
+                    <img class="card-link-photo" rel="member-photo" src="/images/Trey-photo.jpg"  alt="Trey">
                 </a>
 
                 <a ID="Trey" class="live-status" href="#">
@@ -199,7 +199,7 @@
 
                 <div class="about-bottom-left">
                     <h class="photo-caption-h">Trey</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
         </div>
@@ -230,7 +230,7 @@
 
         <div class="info-card" id="Alec-card">
             <div class="info-card-photo">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Alec">
+                <img rel="member-photo" src="/images/Alec-photo.jpg" alt="Alec">
 
                 <a ID="Alec" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -238,20 +238,20 @@
 
                 <div class="bottom-left">
                     <h class="photo-caption-h">Alec</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: "Moral Support Gremlin"</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Modern, Limited, Cube</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Cube</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: Combo</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set:  Ravnica: City of Guilds</p>
             </div>
         </div>
 
@@ -273,7 +273,7 @@
             <div class="member-info">
                 <p>Titles: THR Graphics Designer</p>
                 <br>
-                <p>Formats: modern, legacy, pioneer, historic</p>
+                <p>Formats: Modern, Legacy, Pioneer, Historic</p>
                 <br>
                 <p>Favorite Format: Modern</p>
                 <br>
@@ -485,14 +485,14 @@
                 <br>
                 <p> Preferred archetype: MonoR/MonoW</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set: blah blah blah</p>
             </div>
         </div>
 
         <!-- Trey's full info card -->
         <div class="info-card" id="Trey-card">
             <div class="info-card-photo">
-                <img rel="member-photo" src="/images/placeholder.jpg" alt="Trey">
+                <img rel="member-photo" src="/images/Trey-photo.jpg" alt="Trey">
 
                 <a ID="Trey" class="info-live-status" href="#">
                     <img rel="islive" src="/images/live.png" alt="isLive">
@@ -500,20 +500,20 @@
 
                 <div class="bottom-left">
                     <h class="photo-caption-h">Trey</h>
-                    <p class="photo-caption-p">identity</p>
+                    <p class="photo-caption-p">(He/Him)</p>
                 </div>
             </div>
 
             <div class="member-info">
-                <p>Titles: Blah Blah Blah</p>
+                <p>Titles: "The Shadow"</p>
                 <br>
-                <p>Formats: blah blah blah</p>
+                <p>Formats: Modern, Sealed</p>
                 <br>
-                <p>Favorite Format: blah blah blah</p>
+                <p>Favorite Format: Modern</p>
                 <br>
-                <p> Preferred archetype: blah blah blah</p>
+                <p> Preferred archetype: Midrange</p>
                 <br>
-                <p> Anything else?: blah blah blah</p>
+                <p> First Set: OG Theros</p>
             </div>
         </div>
 
